--- a/Carrossel/hannah - Copy.html
+++ b/Carrossel/hannah - Copy.html
@@ -57,8 +57,7 @@
       align-items: center;
       justify-content: space-between;
       padding: 10px 20px;
-      /* Tornamos translúcida a cor de fundo */
-      background-color: rgba(232, 240, 232, 0.85);
+      background-color: rgba(232, 240, 232, 0.85); /* Barra translúcida */
       position: relative;
     }
 
@@ -152,7 +151,6 @@
       BANNER INICIAL (HERO)
       - Ocupa a tela visível (100vh)
       - Texto branco, centralizado
-      - Removemos a imagem do banner
     */
     #hero {
       display: flex;
@@ -165,9 +163,6 @@
       z-index: 0;
       text-align: center;
     }
-
-    /* Removemos o container da imagem original */
-    /* .banner-img { display: none; } */
 
     #hero .hero-text {
       display: flex;
@@ -224,16 +219,50 @@
       font-size: 2rem;
     }
 
-    #sobre-nos p {
-      max-width: 800px;
-      margin: 0 auto 20px auto;
-      font-size: 1rem;
+    /* Container que agrupa imagem e texto lado a lado */
+    .sobre-nos-content {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 30px;
     }
 
-    @media (min-width: 769px) {
-      #sobre-nos p {
-        text-align: justify;
-      }
+    /* Iniciam escondidos e fora da tela */
+    .sobre-nos-img,
+    .sobre-nos-text {
+      opacity: 0;
+    }
+
+    .sobre-nos-img.animate-left {
+      transform: translateX(-120%);
+      transition: all 0.8s ease;
+    }
+    .sobre-nos-text.animate-right {
+      transform: translateX(120%);
+      transition: all 0.8s ease;
+    }
+
+    .sobre-nos-img.animate-left.active,
+    .sobre-nos-text.animate-right.active {
+      opacity: 1;
+      transform: translateX(0);
+    }
+
+    .sobre-nos-img {
+      flex: 1 1 300px;
+      max-width: 400px;
+    }
+    .sobre-nos-img img {
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+    }
+
+    .sobre-nos-text {
+      flex: 1 1 300px;
+      max-width: 600px;
     }
 
     #sobre-nos .mv-vals {
@@ -241,7 +270,6 @@
       flex-wrap: wrap;
       justify-content: center;
       gap: 20px;
-      margin-top: 20px;
     }
 
     #sobre-nos .mv-vals .item {
@@ -291,15 +319,18 @@
 
     /* SEÇÃO PROJETOS (CARROSSEL CIRCULAR) */
     #projetos {
+      position: relative;  
+      color: #000;         /* Ajuste se precisar de contraste */
       padding: 60px 40px;
-      background-color: var(--fundo-claro);
       text-align: center;
+      background: url("imagens/fundocarrossel.png") center center / cover no-repeat fixed;
     }
 
     #projetos h2 {
       font-family: 'Montserrat', sans-serif;
       font-weight: 700;
-      color: var(--primaria);
+      /* Letra branca, conforme solicitado */
+      color: #ffffff;
       margin-bottom: 30px;
       font-size: 2rem;
     }
@@ -358,7 +389,7 @@
       }
     }
 
-    /* Minicírculos (sem top/left fixos agora) */
+    /* Minicírculos */
     .min-circle {
       position: absolute;
       width: 80px;
@@ -414,26 +445,41 @@
       cursor: pointer;
     }
 
-    /* LISTA DE PROJETOS (ABAIXO DO CARROSSEL) */
+    /* LISTA DE PROJETOS (BOTÕES) ABAIXO DO CARROSSEL */
     .project-list {
       max-width: 600px;
       margin: 0 auto 40px auto;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      align-items: center;
     }
+
     .project-list ul {
+      width: 100%;
       display: flex;
       flex-direction: column;
       gap: 10px;
     }
+
+    /* Ajustando estilo para parecer mais com botões */
     .project-list li {
-      background-color: #fff;
-      border: 1px solid var(--primaria);
-      border-radius: 6px;
-      padding: 10px;
+      display: inline-block;
+      text-align: center;
+      padding: 10px 20px;
+      background-color: var(--primaria);
+      color: #fff;
+      border: none;
+      border-radius: 8px;
       cursor: pointer;
       transition: background-color 0.3s ease;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 600;
+      font-size: 1rem;
     }
+
     .project-list li:hover {
-      background-color: var(--fundo-claro);
+      background-color: var(--secundaria);
     }
 
     /* SEÇÃO COMO AJUDAR */
@@ -646,6 +692,17 @@
         font-size: 1.6rem;
       }
 
+      .sobre-nos-content {
+        flex-direction: column;
+      }
+
+      .sobre-nos-img.animate-left {
+        transform: translateX(-100%);
+      }
+      .sobre-nos-text.animate-right {
+        transform: translateX(100%);
+      }
+
       #sobre-nos .mv-vals {
         flex-direction: column;
         align-items: center;
@@ -653,6 +710,7 @@
 
       #projetos {
         padding: 30px 20px;
+        background-attachment: scroll; /* Para evitar problemas em telas pequenas */
       }
 
       #projetos h2 {
@@ -807,19 +865,29 @@
   <!-- SEÇÃO SOBRE NÓS -->
   <section id="sobre-nos">
     <h2 id="sobre-nos-h2">Sobre Nós</h2>
-    <p id="sobre-nos-p1">
-      Nossa história começou em meio ao deserto. Durante a batalha contra um câncer maligno que acometeu Carla, fomos
-      confrontados com a realidade da brevidade da vida. Essa experiência nos fez refletir sobre o que realmente
-      importa. Foi nesse momento de vulnerabilidade que recebemos não apenas o milagre da cura, mas também o chamado
-      missionário.
-    </p>
-    <p id="sobre-nos-p2">
-      Há mais de 7 anos, temos dedicado nossas vidas integralmente a Deus, atuando como missionários no sudoeste
-      asiático. Já plantamos igrejas e Centros de Ensino na Tailândia e em Myanmar, e agora expandimos nosso trabalho
-      para o Camboja. Carla, pedagoga especialista em educação, e Gustavo, professor e teólogo com mestrado em
-      educação e missiologia, unem suas vocações para transformar vidas por meio da fé, educação e ação humanitária.
-    </p>
 
+    <!-- Container unindo imagem e texto lado a lado, com animação via scroll -->
+    <div class="sobre-nos-content">
+      <div class="sobre-nos-img animate-left">
+        <img src="imagens/gustavocarla.png" alt="Gustavo e Carla" />
+      </div>
+      <div class="sobre-nos-text animate-right">
+        <p>
+          Our story began in the midst of a desert. During Carla's battle against a malignant cancer, we were confronted
+          with the brevity of life. This experience made us reflect on what truly matters. In that vulnerable moment, 
+          we received not only the miracle of healing but also a missionary calling.
+        </p>
+        <p>
+          For over 7 years, we have dedicated our lives fully to God, serving as missionaries in Southeast Asia.
+          We have planted churches and Education Centers in Thailand and Myanmar, and now we are expanding our work
+          to Cambodia. Carla, a pedagogue specialized in education, and Gustavo, a professor and theologian with a
+          master's degree in education and missiology, combine their callings to transform lives through faith,
+          education, and humanitarian action.
+        </p>
+      </div>
+    </div>
+
+    <!-- Missão, Visão, Valores -->
     <div class="mv-vals">
       <div class="item">
         <h3 id="missao-h3">Missão</h3>
@@ -847,7 +915,7 @@
     </blockquote>
   </section>
 
-  <!-- SEÇÃO PROJETOS - CARROSSEL CIRCULAR -->
+  <!-- SEÇÃO PROJETOS - CARROSSEL CIRCULAR (fundo fundocarrossel.png) -->
   <section id="projetos">
     <h2 id="projetos-h2">Nossos Projetos</h2>
 
@@ -1119,7 +1187,7 @@
         const clickedTitle = this.getAttribute('data-title');
         const clickedText = this.getAttribute('data-text');
 
-        // Troca o conteúdo do círculo central (imagem + data-attributes)
+        // Troca o conteúdo do círculo central
         mainCircle.innerHTML = `
           <img
             src="${clickedImgSrc}"
@@ -1133,20 +1201,20 @@
           >
         `;
 
-        // Atualiza o círculo clicado com o conteúdo anterior do círculo central
+        // Atualiza o círculo clicado
         const clickedImg = this.querySelector('img');
         clickedImg.setAttribute('src', mainImgSrc);
         this.setAttribute('data-img', mainImgSrc);
         this.setAttribute('data-title', mainTitle);
         this.setAttribute('data-text', mainText);
 
-        // Também preservamos os data-title-pt/en e data-text-pt/en do círculo
+        // Também preservamos os data-title-pt/en e data-text-pt/en
         this.setAttribute('data-title-pt', mainImg.getAttribute('data-title-pt'));
         this.setAttribute('data-title-en', mainImg.getAttribute('data-title-en'));
         this.setAttribute('data-text-pt', mainImg.getAttribute('data-text-pt'));
         this.setAttribute('data-text-en', mainImg.getAttribute('data-text-en'));
 
-        // Abre o modal com as informações do círculo clicado
+        // Abre o modal
         document.getElementById('modal').style.display = 'block';
         document.getElementById('modal-title').textContent = clickedTitle;
         document.getElementById('modal-text').textContent = clickedText;
@@ -1167,7 +1235,7 @@
       }
     });
 
-    // Ao clicar numa LI de projeto, "simulamos" clique no respectivo círculo
+    // Ao clicar numa LI de projeto, simulamos clique no respectivo círculo
     function clickProjectCircleByTitle(title) {
       const circle = document.querySelector(`.min-circle[data-title="${title}"]`);
       if(circle) {
@@ -1215,12 +1283,10 @@
         // Aplica estilos
         minCircle.style.left = x + '%';
         minCircle.style.top = y + '%';
-        // Centraliza o próprio minCircle
         minCircle.style.transform = 'translate(-50%, -50%)';
       });
     }
 
-    // Chama a função ao carregar e quando a tela for redimensionada
     window.addEventListener('DOMContentLoaded', positionMinCircles);
     window.addEventListener('resize', positionMinCircles);
 
@@ -1282,14 +1348,6 @@
         pt: "Sobre Nós",
         en: "About Us"
       },
-      "sobre-nos-p1": {
-        pt: "Nossa história começou em meio ao deserto. Durante a batalha contra um câncer maligno que acometeu Carla, fomos confrontados com a realidade da brevidade da vida. Essa experiência nos fez refletir sobre o que realmente importa. Foi nesse momento de vulnerabilidade que recebemos não apenas o milagre da cura, mas também o chamado missionário.",
-        en: "Our story began in the midst of a desert. During Carla's battle against a malignant cancer, we were confronted with the brevity of life. This experience made us reflect on what truly matters. In that vulnerable moment, we received not only the miracle of healing but also a missionary calling."
-      },
-      "sobre-nos-p2": {
-        pt: "Há mais de 7 anos, temos dedicado nossas vidas integralmente a Deus, atuando como missionários no sudoeste asiático. Já plantamos igrejas e Centros de Ensino na Tailândia e em Myanmar, e agora expandimos nosso trabalho para o Camboja. Carla, pedagoga especialista em educação, e Gustavo, professor e teólogo com mestrado em educação e missiologia, unem suas vocações para transformar vidas por meio da fé, educação e ação humanitária.",
-        en: "For over 7 years, we have dedicated our lives fully to God, serving as missionaries in Southeast Asia. We have planted churches and Education Centers in Thailand and Myanmar, and now we are expanding our work to Cambodia. Carla, a pedagogue specialized in education, and Gustavo, a professor and theologian with a master's degree in education and missiology, combine their callings to transform lives through faith, education, and humanitarian action."
-      },
       "missao-h3": {
         pt: "Missão",
         en: "Mission"
@@ -1324,7 +1382,6 @@
         pt: "Nossos Projetos",
         en: "Our Projects"
       },
-      // Lista de projetos
       "li-projeto1": {
         pt: "Centro de Aprendizado HIS",
         en: "HIS Learning Center"
@@ -1435,12 +1492,36 @@
       }
     };
 
-    // Função que aplica a mudança de idioma
+    // Aplica idioma padrão e configura observer de animação
+    window.addEventListener('load', () => {
+      document.getElementById('language-select').value = 'pt';
+      changeLanguage();
+
+      /* INTERSECTION OBSERVER PARA ANIMAR IMAGEM E TEXTO NA SEÇÃO SOBRE NÓS */
+      const scrollElements = document.querySelectorAll('.animate-left, .animate-right');
+      const observerOptions = {
+        threshold: 0.05
+      };
+      const observer = new IntersectionObserver((entries, obs) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add('active');
+            obs.unobserve(entry.target); // anima só uma vez
+          }
+        });
+      }, observerOptions);
+
+      scrollElements.forEach(el => {
+        observer.observe(el);
+      });
+    });
+
+    // Função para trocar idioma
     function changeLanguage() {
       const newLang = document.getElementById('language-select').value;
       document.documentElement.setAttribute("lang", newLang);
 
-      // Percorre todas as chaves do dicionário e atualiza o conteúdo
+      // Percorre todas as chaves do dicionário e atualiza conteúdo
       for (let key in translations) {
         const element = document.getElementById(key);
         if (element) {
@@ -1458,16 +1539,15 @@
       updateCarrosselData(newLang);
     }
 
-    // Atualiza os data-attributes dos círculos do carrossel e da lista de projetos
+    // Ajusta data-attributes (carrossel e lista de projetos) para o novo idioma
     function updateCarrosselData(lang) {
       // min-circles
       document.querySelectorAll('.min-circle').forEach(circle => {
-        // Ajusta data-title e data-text
         circle.setAttribute('data-title', circle.getAttribute(`data-title-${lang}`));
         circle.setAttribute('data-text', circle.getAttribute(`data-text-${lang}`));
       });
 
-      // Círculo central (img)
+      // Círculo central
       const mainImg = document.querySelector('#main-circle-content img');
       if (mainImg) {
         mainImg.setAttribute('data-title', mainImg.getAttribute(`data-title-${lang}`));
@@ -1479,13 +1559,6 @@
         item.setAttribute('data-title', item.getAttribute(`data-title-${lang}`));
       });
     }
-
-    // Define idioma padrão (PT) ao carregar
-    window.addEventListener('load', () => {
-      document.getElementById('language-select').value = 'pt';
-      changeLanguage();
-    });
   </script>
-
 </body>
 </html>
