--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -329,8 +329,7 @@
     #projetos h2 {
       font-family: 'Montserrat', sans-serif;
       font-weight: 700;
-      /* Letra branca, conforme solicitado */
-      color: #ffffff;
+      color: #ffffff; /* Letra branca */
       margin-bottom: 30px;
       font-size: 2rem;
     }
@@ -462,7 +461,7 @@
       gap: 10px;
     }
 
-    /* Ajustando estilo para parecer mais com botões */
+    /* Estilo de botões */
     .project-list li {
       display: inline-block;
       text-align: center;
@@ -516,15 +515,18 @@
 
     /* SEÇÃO HISTÓRIAS DE IMPACTO */
     #historias-impacto {
+      position: relative;
       padding: 40px 20px;
-      background-color: var(--fundo-claro);
+      text-align: center;
+      /* Imagem de fundo parallax */
+      background: url("imagens/fundoimpacto.png") center center / cover no-repeat fixed;
+      color: #000; /* Ajuste se precisar de contraste */
     }
 
     #historias-impacto h2 {
       font-family: 'Montserrat', sans-serif;
       font-weight: 700;
-      color: var(--primaria);
-      text-align: center;
+      color: #ffffff; /* Texto branco para contraste */
       margin-bottom: 30px;
       font-size: 2rem;
     }
@@ -566,6 +568,28 @@
     #historias-impacto .historias .card .content p {
       font-size: 0.95rem;
       text-align: center;
+      color: #333;
+    }
+
+    /* Botão \"Conheça mais histórias\" */
+    .impacto-cta {
+      margin-top: 20px;
+      text-align: center;
+    }
+    .impacto-cta a {
+      display: inline-block;
+      background-color: var(--primaria);
+      color: #fff;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 600;
+      padding: 10px 20px;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: background-color 0.3s ease;
+      font-size: 1rem;
+    }
+    .impacto-cta a:hover {
+      background-color: var(--secundaria);
     }
 
     /* SEÇÃO DEPOIMENTOS */
@@ -710,7 +734,7 @@
 
       #projetos {
         padding: 30px 20px;
-        background-attachment: scroll; /* Para evitar problemas em telas pequenas */
+        background-attachment: scroll; /* Evita problema em telas pequenas */
       }
 
       #projetos h2 {
@@ -745,6 +769,7 @@
 
       #historias-impacto {
         padding: 20px 10px;
+        background-attachment: scroll; /* Parallax fix workaround */
       }
       #historias-impacto h2 {
         font-size: 1.6rem;
@@ -1093,6 +1118,7 @@
   <!-- SEÇÃO HISTÓRIAS DE IMPACTO -->
   <section id="historias-impacto">
     <h2 id="historias-impacto-h2">Histórias de Impacto</h2>
+
     <div class="historias">
       <!-- História 1 -->
       <div class="card">
@@ -1120,6 +1146,11 @@
           </p>
         </div>
       </div>
+    </div>
+
+    <!-- Botão para abrir impacto.html -->
+    <div class="impacto-cta">
+      <a href="impacto.html">Conheça mais histórias</a>
     </div>
   </section>
 
