--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -22,6 +22,11 @@
       box-sizing: border-box;
     }
 
+    html, body {
+      width: 100%;
+      overflow-x: hidden; /* Evita scroll horizontal */
+    }
+
     html {
       font-size: 16px; /* Tamanho base em telas maiores */
     }
@@ -59,6 +64,7 @@
       padding: 10px 20px;
       background-color: rgba(232, 240, 232, 0.85); /* Barra translúcida */
       position: relative;
+      flex-wrap: nowrap; /* Impede quebra de linha do menu */
     }
 
     /* Botão (hamburger) que só aparece no mobile */
@@ -71,16 +77,20 @@
 
     header .logo img {
       height: 50px;
+      max-width: 100%;
+      object-fit: cover;
     }
 
     /* MENU DISCRETO NA DIREITA */
     nav.menu {
-      margin-left: auto; /* empurra o menu para a direita */
+      margin-left: auto;
+      flex-shrink: 0; /* Impede encolher */
     }
 
     nav.menu ul {
       display: flex;
       gap: 20px;
+      flex-wrap: nowrap;
     }
 
     nav.menu ul li a {
@@ -95,11 +105,11 @@
       color: var(--secundaria);
     }
 
-    /* BOTÃO DOE AGORA (opcional no header) */
+    /* BOTÃO DOE AGORA (SÓ EM TELAS MAIORES) */
     .cta-header {
       margin-left: 20px;
+      flex-shrink: 0;
     }
-
     .cta-header button {
       background-color: var(--primaria);
       color: var(--texto-claro);
@@ -111,8 +121,29 @@
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
-
     .cta-header button:hover {
+      background-color: var(--secundaria);
+    }
+
+    /* BOTÃO FLUTUANTE DOE AGORA (APARECE APENAS EM TELAS PEQUENAS) */
+    .donate-float-mobile {
+      display: none;
+      position: fixed;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 9999;
+      background-color: var(--primaria);
+      color: var(--texto-claro);
+      border: none;
+      padding: 10px 20px;
+      border-radius: 8px;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    .donate-float-mobile:hover {
       background-color: var(--secundaria);
     }
 
@@ -126,6 +157,7 @@
       font-weight: 600;
       font-size: 14px;
       cursor: pointer;
+      flex-shrink: 0;
     }
 
     .lang-switch button {
@@ -210,7 +242,6 @@
       z-index: -1; /* Fica atrás do texto */
       overflow: hidden;
     }
-
     .hero-video-wrap video {
       width: 100%;
       height: 100%;
@@ -311,6 +342,8 @@
       width: 100%;
       height: auto;
       border-radius: 8px;
+      max-width: 100%; /* Garante adaptação em telas pequenas */
+      object-fit: cover;
     }
 
     .sobre-nos-text {
@@ -393,6 +426,7 @@
       height: 600px;
       margin: 0 auto 40px auto;
       overflow: visible;
+      max-width: 100%;
     }
 
     #main-circle-content {
@@ -441,7 +475,7 @@
       }
     }
 
-    /* Minicírculos */
+    /* Minicírculos (7) */
     .min-circle {
       position: absolute;
       width: 80px;
@@ -453,11 +487,9 @@
       cursor: pointer;
       transition: transform 0.2s;
     }
-
     .min-circle:hover {
       transform: scale(1.1);
     }
-
     .min-circle img {
       width: 100%;
       height: 100%;
@@ -506,15 +538,12 @@
       gap: 10px;
       align-items: center;
     }
-
     .project-list ul {
       width: 100%;
       display: flex;
       flex-direction: column;
       gap: 10px;
     }
-
-    /* Estilo de botões */
     .project-list li {
       display: inline-block;
       text-align: center;
@@ -529,7 +558,6 @@
       font-weight: 600;
       font-size: 1rem;
     }
-
     .project-list li:hover {
       background-color: var(--secundaria);
     }
@@ -556,11 +584,9 @@
       font-size: 1rem;
       line-height: 1.6;
     }
-
     #como-ajudar ul li {
       margin-bottom: 10px;
     }
-
     #como-ajudar p {
       margin-bottom: 20px;
       font-size: 1rem;
@@ -572,7 +598,7 @@
       padding: 40px 20px;
       text-align: center;
       background: url("imagens/fundoimpacto.png") center center / cover no-repeat fixed;
-      color: #000; /* Ajuste se precisar de contraste */
+      color: #000;
     }
 
     #historias-impacto h2 {
@@ -598,17 +624,14 @@
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
       text-align: center;
     }
-
     #historias-impacto .historias .card img {
       width: 100%;
       height: 200px;
       object-fit: cover;
     }
-
     #historias-impacto .historias .card .content {
       padding: 15px;
     }
-
     #historias-impacto .historias .card .content h3 {
       font-family: 'Montserrat', sans-serif;
       font-weight: 600;
@@ -616,13 +639,11 @@
       margin-bottom: 10px;
       font-size: 1.1rem;
     }
-
     #historias-impacto .historias .card .content p {
       font-size: 0.95rem;
       text-align: center;
       color: #333;
     }
-
     /* Botão \"Conheça mais histórias\" */
     .impacto-cta {
       margin-top: 20px;
@@ -717,7 +738,6 @@
       margin: 0 10px;
       transition: color 0.3s ease;
     }
-
     footer .social-media a:hover {
       color: var(--secundaria);
     }
@@ -726,7 +746,6 @@
      * RESPONSIVIDADE ESTRUTURAL PARA TELAS MENORES
      **********************************************/
     @media (max-width: 992px) {
-      /* Ajustes progressivos para telas menores que 992px */
       #hero .hero-text h1 {
         font-size: 1.8rem;
       }
@@ -738,7 +757,8 @@
       }
 
       header {
-        flex-wrap: wrap;
+        flex-wrap: nowrap; /* Mantém tudo numa linha, mas se não couber, forçará overflow */
+        overflow-x: auto; /* se força rolagem, mas iremos evitar */
       }
 
       .menu-btn {
@@ -753,8 +773,13 @@
         margin-top: 10px;
       }
 
+      /* Some com o botão do header */
       .cta-header {
-        margin-left: 0;
+        display: none;
+      }
+      /* Mostra o botão flutuante no mobile */
+      .donate-float-mobile {
+        display: block;
       }
 
       #hero {
@@ -764,7 +789,6 @@
       #hero .hero-text h1 {
         font-size: 1.4rem;
       }
-
       #hero .hero-text p {
         font-size: 1rem;
       }
@@ -772,22 +796,18 @@
       #sobre-nos {
         padding: 20px 10px;
       }
-
       #sobre-nos h2 {
         font-size: 1.6rem;
       }
-
       .sobre-nos-content {
         flex-direction: column;
       }
-
       .sobre-nos-img.animate-left {
         transform: translateX(-100%);
       }
       .sobre-nos-text.animate-right {
         transform: translateX(100%);
       }
-
       #sobre-nos .mv-vals {
         flex-direction: column;
         align-items: center;
@@ -795,28 +815,23 @@
 
       #projetos {
         padding: 30px 20px;
-        background-attachment: scroll; /* Evita problema de parallax em telas pequenas */
+        background-attachment: scroll;
       }
-
       #projetos h2 {
         font-size: 1.6rem;
       }
-
       #circles-container {
         width: 350px;
         height: 350px;
       }
-
       #main-circle-content {
         width: 160px;
         height: 160px;
       }
-
       .min-circle {
         width: 60px;
         height: 60px;
       }
-
       .project-list {
         max-width: 300px;
       }
@@ -830,7 +845,7 @@
 
       #historias-impacto {
         padding: 20px 10px;
-        background-attachment: scroll; /* Evita problema parallax */
+        background-attachment: scroll;
       }
       #historias-impacto h2 {
         font-size: 1.6rem;
@@ -923,7 +938,7 @@
       <button id="nav-doar" onclick="alert('Página de Doação em desenvolvimento')">Doe Agora</button>
     </div>
 
-    <!-- Seletor de idioma estilizado: bandeira + abreviação, sem fundo colorido -->
+    <!-- Seletor de idioma (bandeira + abreviação) -->
     <div class="lang-switch">
       <button id="lang-btn" onclick="toggleLangMenu()">
         <img id="lang-flag" src="imagens/bandeira-pt.png" alt="PT" />
@@ -941,6 +956,11 @@
       </ul>
     </div>
   </header>
+
+  <!-- Botão flutuante DOE AGORA (para mobile) -->
+  <button class="donate-float-mobile" onclick="alert('Página de Doação em desenvolvimento')">
+    Doe Agora
+  </button>
 
   <!-- BANNER INICIAL / HERO (VÍDEO SÓ NESTA SEÇÃO) -->
   <section id="hero">
@@ -1030,8 +1050,9 @@
         />
       </div>
 
-      <!-- Círculo rotatório com minicírculos (exemplo de 2, mas total 7) -->
+      <!-- Círculo rotatório que contém os 7 minicírculos -->
       <div id="circle">
+        <!-- 1: HIS Learning Center -->
         <div
           class="min-circle"
           data-img="imagens/img1.png"
@@ -1045,6 +1066,7 @@
           <img src="imagens/img1.png" alt="HIS Learning Center" />
         </div>
 
+        <!-- 2: Healing Hands -->
         <div
           class="min-circle"
           data-img="imagens/img3.png"
@@ -1057,6 +1079,77 @@
         >
           <img src="imagens/img3.png" alt="Healing Hands" />
         </div>
+
+        <!-- 3: Blessing Table -->
+        <div
+          class="min-circle"
+          data-img="imagens/img2.png"
+          data-title="Blessing Table"
+          data-title-pt="Mesa de Bênçãos"
+          data-title-en="Blessing Table"
+          data-text="Fornecemos lanches durante a semana para os alunos e refeições completas aos sábados, atendendo necessidades físicas e emocionais."
+          data-text-pt="Fornecemos lanches durante a semana para os alunos e refeições completas aos sábados, atendendo necessidades físicas e emocionais."
+          data-text-en="We provide snacks during the week for students and full meals on Saturdays, meeting physical and emotional needs."
+        >
+          <img src="imagens/img2.png" alt="Blessing Table" />
+        </div>
+
+        <!-- 4: Seeds of Wisdom -->
+        <div
+          class="min-circle"
+          data-img="imagens/img6.png"
+          data-title="Seeds of Wisdom"
+          data-title-pt="Sementes de Sabedoria"
+          data-title-en="Seeds of Wisdom"
+          data-text="Garantimos a matrícula e bolsas escolares para crianças refugiadas, possibilitando acesso à educação formal."
+          data-text-pt="Garantimos a matrícula e bolsas escolares para crianças refugiadas, possibilitando acesso à educação formal."
+          data-text-en="We provide enrollment and scholarships for refugee children, giving them access to formal education."
+        >
+          <img src="imagens/img6.png" alt="Seeds of Wisdom" />
+        </div>
+
+        <!-- 5: Shiloh’s Home -->
+        <div
+          class="min-circle"
+          data-img="imagens/img5.png"
+          data-title="Shiloh’s Home"
+          data-title-pt="Lar de Siló"
+          data-title-en="Shiloh’s Home"
+          data-text="Acolhemos mulheres e crianças refugiadas da guerra, oferecendo abrigo, cuidado e esperança em meio à dor."
+          data-text-pt="Acolhemos mulheres e crianças refugiadas da guerra, oferecendo abrigo, cuidado e esperança em meio à dor."
+          data-text-en="We shelter women and children who are war refugees, offering them care, shelter, and hope in the midst of pain."
+        >
+          <img src="imagens/img5.png" alt="Shiloh’s Home" />
+        </div>
+
+        <!-- 6: Hannah’s Church Planting -->
+        <div
+          class="min-circle"
+          data-img="imagens/img4.png"
+          data-title="Hannah’s Church Planting"
+          data-title-pt="Plantação de Igrejas de Hannah"
+          data-title-en="Hannah’s Church Planting"
+          data-text="Por meio do discipulado e formação de líderes, as sementes plantadas geram novas igrejas, fortalecendo comunidades cristãs."
+          data-text-pt="Por meio do discipulado e formação de líderes, as sementes plantadas geram novas igrejas, fortalecendo comunidades cristãs."
+          data-text-en="Through discipleship and leadership training, these seeds lead to new churches, strengthening Christian communities."
+        >
+          <img src="imagens/img4.png" alt="Hannah’s Church Planting" />
+        </div>
+
+        <!-- 7: Harvesting Faith -->
+        <div
+          class="min-circle"
+          data-img="imagens/img7.png"
+          data-title="Harvesting Faith"
+          data-title-pt="Colhendo Fé"
+          data-title-en="Harvesting Faith"
+          data-text="Ensina e desenvolve projetos de agricultura e criação de animais, fortalecendo comunidades, combatendo a fome e gerando renda."
+          data-text-pt="Ensina e desenvolve projetos de agricultura e criação de animais, fortalecendo comunidades, combatendo a fome e gerando renda."
+          data-text-en="It teaches and develops agricultural and livestock projects, strengthening communities, fighting hunger, and generating income."
+        >
+          <img src="imagens/img7.png" alt="Harvesting Faith" />
+        </div>
+
       </div>
     </div>
 
@@ -1068,7 +1161,21 @@
         <li id="li-projeto2" data-title="Healing Hands" data-title-pt="Mãos que Curam" data-title-en="Healing Hands">
           Mãos que Curam
         </li>
-        <!-- ... até 7 itens -->
+        <li id="li-projeto3" data-title="Blessing Table" data-title-pt="Mesa de Bênçãos" data-title-en="Blessing Table">
+          Mesa de Bênçãos
+        </li>
+        <li id="li-projeto4" data-title="Seeds of Wisdom" data-title-pt="Sementes de Sabedoria" data-title-en="Seeds of Wisdom">
+          Sementes de Sabedoria
+        </li>
+        <li id="li-projeto5" data-title="Shiloh’s Home" data-title-pt="Lar de Siló" data-title-en="Shiloh’s Home">
+          Lar de Siló
+        </li>
+        <li id="li-projeto6" data-title="Hannah’s Church Planting" data-title-pt="Plantação de Igrejas de Hannah" data-title-en="Hannah’s Church Planting">
+          Plantação de Igrejas de Hannah
+        </li>
+        <li id="li-projeto7" data-title="Harvesting Faith" data-title-pt="Colhendo Fé" data-title-en="Harvesting Faith">
+          Colhendo Fé
+        </li>
       </ul>
     </div>
   </section>
@@ -1219,6 +1326,7 @@
     /***************************************************************
      * CARROSSEL & MODAL (a lógica de troca de conteúdo permanece) *
      ***************************************************************/
+    // Minicírculos -> trocar conteúdo com o círculo central + exibir modal
     document.querySelectorAll('.min-circle').forEach(circle => {
       circle.addEventListener('click', function () {
         const mainCircle = document.getElementById('main-circle-content');
@@ -1252,6 +1360,7 @@
         this.setAttribute('data-title', mainTitle);
         this.setAttribute('data-text', mainText);
 
+        // Preserva data-attributes
         this.setAttribute('data-title-pt', mainImg.getAttribute('data-title-pt'));
         this.setAttribute('data-title-en', mainImg.getAttribute('data-title-en'));
         this.setAttribute('data-text-pt', mainImg.getAttribute('data-text-pt'));
@@ -1299,7 +1408,7 @@
       circleElement.style.animationPlayState = 'running';
     });
 
-    // Posiciona minicírculos
+    // Ajusta posição dos minicírculos
     function positionMinCircles() {
       const circle = document.getElementById('circle');
       if (!circle) return;
