--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -28,7 +28,7 @@
     }
 
     html {
-      font-size: 16px;
+      font-size: 16px; /* base para desktops */
     }
 
     body {
@@ -68,7 +68,7 @@
     }
 
     .menu-btn {
-      display: none; /* escondido no desktop */
+      display: none; /* só aparece no mobile */
       font-size: 28px;
       cursor: pointer;
       margin-left: auto;
@@ -84,13 +84,11 @@
       margin-left: auto;
       flex-shrink: 0;
     }
-
     nav.menu ul {
       display: flex;
       gap: 20px;
       flex-wrap: nowrap;
     }
-
     nav.menu ul li a {
       font-family: 'Montserrat', sans-serif;
       font-weight: 600;
@@ -98,11 +96,11 @@
       transition: color 0.3s ease;
       white-space: nowrap;
     }
-
     nav.menu ul li a:hover {
       color: var(--secundaria);
     }
 
+    /* BOTÃO DOE AGORA (desktop) */
     .cta-header {
       margin-left: 20px;
       flex-shrink: 0;
@@ -122,6 +120,7 @@
       background-color: var(--secundaria);
     }
 
+    /* BOTÃO DOE AGORA (mobile flutuante) */
     .donate-float-mobile {
       display: none;
       position: fixed;
@@ -143,7 +142,7 @@
       background-color: var(--secundaria);
     }
 
-    /* IDIOMA */
+    /* SELETOR DE IDIOMA (BANDEIRA + ABREVIAÇÃO) */
     .lang-switch {
       position: relative;
       margin-left: 15px;
@@ -200,7 +199,7 @@
       background-color: var(--fundo-claro);
     }
 
-    /* HERO */
+    /* HERO (com vídeo no background) */
     #hero {
       position: relative;
       display: flex;
@@ -263,11 +262,30 @@
       background-color: var(--secundaria);
     }
 
+    /* ANIMAÇÕES DE SLIDE (IntersectionObserver) */
+    .slide-left, .slide-right, .slide-up {
+      opacity: 0;
+      transition: all 0.8s ease;
+    }
+    .slide-left {
+      transform: translateX(-50px);
+    }
+    .slide-right {
+      transform: translateX(50px);
+    }
+    .slide-up {
+      transform: translateY(40px);
+    }
+    .slide-active {
+      opacity: 1;
+      transform: translate(0, 0);
+    }
+
     /* SEÇÃO SOBRE NÓS */
     #sobre-nos {
       padding: 40px 20px;
       background-color: #ffffff;
-      text-align: center; /* Texto centralizado */
+      text-align: center;
     }
     #sobre-nos h2 {
       font-family: 'Montserrat', sans-serif;
@@ -288,7 +306,6 @@
     .sobre-nos-img {
       flex: 1 1 300px;
       max-width: 400px;
-      /* Removemos qualquer condicional de animação para exibir sempre */
     }
     .sobre-nos-img img {
       width: 100%;
@@ -305,15 +322,15 @@
       margin-bottom: 15px;
     }
 
-    #sobre-nos .mv-vals {
+    /* Melhora a aparência dos quadros Missão, Visão, Valores */
+    .mv-vals {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 20px;
       margin-top: 20px;
     }
-    /* Melhora a aparência dos quadros Missão, Visão, Valores */
-    #sobre-nos .mv-vals .item {
+    .mv-vals .item {
       flex: 1 1 200px;
       max-width: 280px;
       background-color: var(--fundo-claro);
@@ -325,11 +342,11 @@
       border: 2px solid var(--primaria);
       transition: transform 0.2s ease;
     }
-    #sobre-nos .mv-vals .item:hover {
+    .mv-vals .item:hover {
       transform: translateY(-2px);
       box-shadow: 0 5px 12px rgba(0, 0, 0, 0.15);
     }
-    #sobre-nos .mv-vals .item h3 {
+    .mv-vals .item h3 {
       font-family: 'Montserrat', sans-serif;
       font-weight: 700;
       color: var(--primaria);
@@ -337,12 +354,13 @@
       font-size: 1.2rem;
       text-transform: uppercase;
     }
-    #sobre-nos .mv-vals .item p {
+    .mv-vals .item p {
       font-size: 1rem;
       line-height: 1.6;
       margin: 0;
       text-align: center;
     }
+
     #sobre-nos blockquote {
       max-width: 600px;
       margin: 30px auto 0 auto;
@@ -363,7 +381,7 @@
 
     /* SEÇÃO PROJETOS (CARROSSEL CIRCULAR) */
     #projetos {
-      position: relative;
+      position: relative;  
       color: #000;
       padding: 60px 40px;
       text-align: center;
@@ -445,7 +463,7 @@
       object-fit: cover;
     }
 
-    /* MODAL */
+    /* MODAL (popup) */
     .modal {
       display: none;
       position: fixed;
@@ -718,10 +736,6 @@
       .sobre-nos-content {
         flex-direction: column;
       }
-      #sobre-nos .mv-vals {
-        flex-direction: column;
-        align-items: center;
-      }
       #projetos {
         padding: 30px 20px;
         background-attachment: scroll;
@@ -816,15 +830,12 @@
 
   <!-- CABEÇALHO -->
   <header>
-    <!-- Logotipo -->
     <div class="logo">
       <img src="imagens/logo.png" alt="Logotipo Fundação Hannah" />
     </div>
 
-    <!-- Botão menu mobile -->
     <div class="menu-btn" onclick="toggleMenu()">☰</div>
 
-    <!-- Navegação -->
     <nav class="menu">
       <ul>
         <li><a id="nav-sobre-nos" href="#sobre-nos">Sobre Nós</a></li>
@@ -836,12 +847,11 @@
       </ul>
     </nav>
 
-    <!-- Botão Doe Agora (desktop) -->
     <div class="cta-header">
       <button id="nav-doar" onclick="alert('Página de Doação em desenvolvimento')">Doe Agora</button>
     </div>
 
-    <!-- Seletor de idioma -->
+    <!-- Idioma -->
     <div class="lang-switch">
       <button id="lang-btn" onclick="toggleLangMenu()">
         <img id="lang-flag" src="imagens/bandeira-pt.png" alt="PT" />
@@ -860,7 +870,7 @@
     </div>
   </header>
 
-  <!-- Botão flutuante Doe Agora (mobile) -->
+  <!-- Botão flutuante (mobile) -->
   <button class="donate-float-mobile" onclick="alert('Página de Doação em desenvolvimento')">
     Doe Agora
   </button>
@@ -884,43 +894,46 @@
 
   <!-- SEÇÃO SOBRE NÓS -->
   <section id="sobre-nos">
-    <h2 id="sobre-nos-h2">Sobre Nós</h2>
+    <h2 id="sobre-nos-h2" class="slide-up">Sobre Nós</h2>
 
     <div class="sobre-nos-content">
-      <div class="sobre-nos-img">
+      <!-- Imagem com slide da esquerda -->
+      <div class="sobre-nos-img slide-left">
         <img src="imagens/gustavocarla.png" alt="Gustavo e Carla" />
       </div>
-      <div class="sobre-nos-text">
+
+      <!-- Texto com slide da direita -->
+      <div class="sobre-nos-text slide-right">
         <p>
-          Nossa história começou em meio ao deserto. Durante a batalha contra um câncer maligno que acometeu Carla, fomos
-          confrontados com a realidade da brevidade da vida. Essa experiência nos fez refletir sobre o que realmente
-          importa. Foi nesse momento de vulnerabilidade que recebemos não apenas o milagre da cura, mas também o chamado
-          missionário.
+          Nossa história começou em meio ao deserto. Durante a batalha contra o câncer maligno que acometeu Carla,
+          encaramos a brevidade da vida. Essa experiência nos fez refletir sobre o que realmente importa. Nesse momento
+          de vulnerabilidade, recebemos o milagre da cura e também o chamado missionário.
         </p>
         <p>
-          Há mais de 7 anos, temos dedicado nossas vidas integralmente a Deus, atuando como missionários no sudoeste
-          asiático. Já plantamos igrejas e Centros de Ensino na Tailândia e em Myanmar, e agora expandimos nosso trabalho
-          para o Camboja. Carla, pedagoga especialista em educação, e Gustavo, professor e teólogo com mestrado em
-          educação e missiologia, unem suas vocações para transformar vidas por meio da fé, educação e ação humanitária.
+          Há mais de 7 anos, dedicamos nossas vidas integralmente a Deus como missionários no sudoeste asiático, onde o
+          budismo predomina e poucos conhecem a Cristo. Já plantamos igrejas e Centros de Ensino na Tailândia e em
+          Myanmar, e agora expandimos nosso trabalho para o Camboja. Carla, pedagoga especialista em educação, e
+          Gustavo, professor e teólogo com mestrado em educação e missiologia, unem suas vocações para transformar vidas
+          por meio da fé, educação e ação humanitária.
         </p>
       </div>
     </div>
 
-    <!-- Missão, Visão, Valores estilizados -->
+    <!-- Missão, Visão, Valores (slide-up) -->
     <div class="mv-vals">
-      <div class="item">
+      <div class="item slide-up">
         <h3 id="missao-h3">Missão</h3>
         <p id="missao-p">
           Participar da missão de Deus, pregando o Evangelho onde Ele ainda não foi anunciado.
         </p>
       </div>
-      <div class="item">
+      <div class="item slide-up">
         <h3 id="visao-h3">Visão</h3>
         <p id="visao-p">
           Estabelecer e fortalecer comunidades cristãs e transformar nações com o amor de Deus.
         </p>
       </div>
-      <div class="item">
+      <div class="item slide-up">
         <h3 id="valores-h3">Valores</h3>
         <p id="valores-p">
           Fé, amor, cuidado, transformação e dedicação total à missão.
@@ -928,7 +941,8 @@
       </div>
     </div>
 
-    <blockquote id="sobre-nos-blockquote">
+    <!-- Versículo (slide-up) -->
+    <blockquote id="sobre-nos-blockquote" class="slide-up">
       <p>"E disse-lhes: Ide por todo o mundo, pregai o evangelho a toda criatura."</p>
       <footer>— Marcos 16:15</footer>
     </blockquote>
@@ -952,7 +966,7 @@
         />
       </div>
       <div id="circle">
-        <!-- 7 minicírculos -->
+        <!-- 1: HIS Learning Center -->
         <div
           class="min-circle"
           data-img="imagens/img1.png"
@@ -965,6 +979,7 @@
         >
           <img src="imagens/img1.png" alt="HIS Learning Center" />
         </div>
+        <!-- 2: Healing Hands -->
         <div
           class="min-circle"
           data-img="imagens/img3.png"
@@ -977,6 +992,7 @@
         >
           <img src="imagens/img3.png" alt="Healing Hands" />
         </div>
+        <!-- 3: Blessing Table -->
         <div
           class="min-circle"
           data-img="imagens/img2.png"
@@ -989,6 +1005,7 @@
         >
           <img src="imagens/img2.png" alt="Blessing Table" />
         </div>
+        <!-- 4: Seeds of Wisdom -->
         <div
           class="min-circle"
           data-img="imagens/img6.png"
@@ -1001,6 +1018,7 @@
         >
           <img src="imagens/img6.png" alt="Seeds of Wisdom" />
         </div>
+        <!-- 5: Shiloh’s Home -->
         <div
           class="min-circle"
           data-img="imagens/img5.png"
@@ -1013,6 +1031,7 @@
         >
           <img src="imagens/img5.png" alt="Shiloh’s Home" />
         </div>
+        <!-- 6: Hannah’s Church Planting -->
         <div
           class="min-circle"
           data-img="imagens/img4.png"
@@ -1025,6 +1044,7 @@
         >
           <img src="imagens/img4.png" alt="Hannah’s Church Planting" />
         </div>
+        <!-- 7: Harvesting Faith -->
         <div
           class="min-circle"
           data-img="imagens/img7.png"
@@ -1067,7 +1087,7 @@
     </div>
   </section>
 
-  <!-- MODAL DOS PROJETOS -->
+  <!-- MODAL -->
   <div id="modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">&times;</span>
@@ -1211,7 +1231,7 @@
     });
 
     /***************************************************************
-     * CARROSSEL & MODAL (troca conteúdo e exibe popup)            *
+     * CARROSSEL & MODAL                                           *
      ***************************************************************/
     document.querySelectorAll('.min-circle').forEach(circle => {
       circle.addEventListener('click', function () {
@@ -1238,6 +1258,7 @@
           >
         `;
 
+        // Atualiza o círculo clicado
         const clickedImg = this.querySelector('img');
         clickedImg.setAttribute('src', mainImgSrc);
         this.setAttribute('data-img', mainImgSrc);
@@ -1249,6 +1270,7 @@
         this.setAttribute('data-text-pt', mainImg.getAttribute('data-text-pt'));
         this.setAttribute('data-text-en', mainImg.getAttribute('data-text-en'));
 
+        // Abre modal
         document.getElementById('modal').style.display = 'block';
         document.getElementById('modal-title').textContent = clickedTitle;
         document.getElementById('modal-text').textContent = clickedText;
@@ -1267,7 +1289,7 @@
       }
     });
 
-    // Ao clicar num item da lista de projetos -> simula clique no min-circle
+    // Lista -> clique no respectivo min-circle
     function clickProjectCircleByTitle(title) {
       const circle = document.querySelector(`.min-circle[data-title="${title}"]`);
       if(circle) {
@@ -1281,7 +1303,7 @@
       });
     });
 
-    // Pausar/retomar rotação ao mouseover
+    // Pausar rotação no hover
     const circleElement = document.getElementById('circle');
     circleElement.addEventListener('mouseover', () => {
       circleElement.style.animationPlayState = 'paused';
@@ -1290,7 +1312,7 @@
       circleElement.style.animationPlayState = 'running';
     });
 
-    // Ajusta posição minicírculos
+    // Posiciona minicírculos
     function positionMinCircles() {
       const circle = document.getElementById('circle');
       if (!circle) return;
@@ -1328,6 +1350,7 @@
       "nav-depoimentos": { pt: "Depoimentos", en: "Testimonials" },
       "nav-contato": { pt: "Contato", en: "Contact" },
       "nav-doar": { pt: "Doe Agora", en: "Donate Now" },
+
       /* HERO */
       "hero-h1": {
         pt: "Transformando vidas e nações com o amor de Deus",
@@ -1341,8 +1364,12 @@
         pt: "Conheça Nosso Trabalho",
         en: "Explore Our Work"
       },
+
       /* SOBRE NÓS */
       "sobre-nos-h2": { pt: "Sobre Nós", en: "About Us" },
+
+      /* Texto PT */
+      /* Observação: adaptando para as chaves que existiam antes */
       "missao-h3": { pt: "Missão", en: "Mission" },
       "missao-p": {
         pt: "Participar da missão de Deus, pregando o Evangelho onde Ele ainda não foi anunciado.",
@@ -1358,10 +1385,26 @@
         pt: "Fé, amor, cuidado, transformação e dedicação total à missão.",
         en: "Faith, love, care, transformation, and total dedication to the mission."
       },
+
       "sobre-nos-blockquote": {
         pt: `<p>"E disse-lhes: Ide por todo o mundo, pregai o evangelho a toda criatura."</p><footer>— Marcos 16:15</footer>`,
         en: `<p>"He said to them: Go into all the world and preach the gospel to every creature."</p><footer>— Mark 16:15</footer>`
       },
+
+      /* Novo texto em PT e EN */
+      /* Colocamos numa única chave para simplificar, ou podemos dividir */
+      /* Mas vamos colocar no lugar do "texto" dentro do .sobre-nos-text */
+      /* Para simplificar, iremos sobrescrever manualmente esse p. */
+      /* Faremos 2 chaves, "sobre-nos-p1" e "sobre-nos-p2"? */
+      "sobre-nos-p1": {
+        pt: "Nossa história começou em meio ao deserto. Durante a batalha contra o câncer maligno que acometeu Carla, encaramos a brevidade da vida. Essa experiência nos fez refletir sobre o que realmente importa. Nesse momento de vulnerabilidade, recebemos o milagre da cura e também o chamado missionário.",
+        en: "Our story began in the midst of a desert. During Carla's battle against malignant cancer, we faced the brevity of life. This experience made us reflect on what truly matters. In that vulnerable moment, we received not only the miracle of healing but also a missionary calling."
+      },
+      "sobre-nos-p2": {
+        pt: "Há mais de 7 anos, dedicamos nossas vidas integralmente a Deus como missionários no sudoeste asiático, onde o budismo predomina e poucos conhecem a Cristo. Já plantamos igrejas e Centros de Ensino na Tailândia e em Myanmar, e agora expandimos nosso trabalho para o Camboja. Carla, pedagoga especialista em educação, e Gustavo, professor e teólogo com mestrado em educação e missiologia, unem suas vocações para transformar vidas por meio da fé, educação e ação humanitária.",
+        en: "For over 7 years, we have dedicated our lives fully to God as missionaries in Southeast Asia, where Buddhism predominates and few have heard of Christ. We have already planted churches and Education Centers in Thailand and Myanmar, and now we are expanding our work to Cambodia. Carla, a pedagogue specialized in education, and Gustavo, a professor and theologian with a master's degree in education and missiology, combine their callings to transform lives through faith, education, and humanitarian action."
+      },
+
       /* PROJETOS */
       "projetos-h2": { pt: "Nossos Projetos", en: "Our Projects" },
       "li-projeto1": { pt: "Centro de Aprendizado HIS", en: "HIS Learning Center" },
@@ -1371,6 +1414,7 @@
       "li-projeto5": { pt: "Lar de Siló", en: "Shiloh’s Home" },
       "li-projeto6": { pt: "Plantação de Igrejas de Hannah", en: "Hannah’s Church Planting" },
       "li-projeto7": { pt: "Colhendo Fé", en: "Harvesting Faith" },
+
       /* COMO AJUDAR */
       "como-ajudar-h2": { pt: "Como Ajudar", en: "How to Help" },
       "como-ajudar-li1": {
@@ -1393,6 +1437,7 @@
         pt: "<strong>PIX:</strong> (Informe os dados específicos)<br><strong>WhatsApp:</strong> (Número para contato)",
         en: "<strong>PIX:</strong> (Provide specific details)<br><strong>WhatsApp:</strong> (Contact number)"
       },
+
       /* HISTÓRIAS DE IMPACTO */
       "historias-impacto-h2": { pt: "Histórias de Impacto", en: "Stories of Impact" },
       "historia1-h3": { pt: "Mai (nome fictício)", en: "Mai (fictional name)" },
@@ -1405,6 +1450,7 @@
         pt: "Arun, de apenas 8 anos, frequentava o Learning Center com fome e dificuldades de aprendizado. Com nosso suporte, ele recebeu alimentação, educação de qualidade e cuidado espiritual. Hoje, Arun lê fluentemente e compartilha versículos bíblicos com sua família.",
         en: "Arun, only 8 years old, used to attend the Learning Center hungry and struggling with his studies. With our support, he received nutritious meals, quality education, and spiritual care. Today, Arun reads fluently and shares Bible verses with his family."
       },
+
       /* DEPOIMENTOS */
       "depoimentos-h2": { pt: "Depoimentos", en: "Testimonials" },
       "depo1-p": {
@@ -1417,6 +1463,7 @@
         en: "\"Volunteering here taught me that true wealth lies in serving others.\""
       },
       "depo2-footer": { pt: "– João, voluntário", en: "– João, volunteer" },
+
       /* RODAPÉ */
       "footer-copy": {
         pt: "© 2025 Fundação Hannah. Todos os direitos reservados.",
@@ -1428,9 +1475,10 @@
       }
     };
 
-    // Lógica de troca de idioma
+    // Função que aplica tradução
     function changeLanguage(lang) {
       document.documentElement.setAttribute("lang", lang);
+
       for (let key in translations) {
         const element = document.getElementById(key);
         if (element) {
@@ -1444,6 +1492,7 @@
       updateCarrosselData(lang);
     }
 
+    // Ajusta data-attributes no carrossel
     function updateCarrosselData(lang) {
       document.querySelectorAll('.min-circle').forEach(circle => {
         circle.setAttribute('data-title', circle.getAttribute(`data-title-${lang}`));
@@ -1459,10 +1508,28 @@
       });
     }
 
-    // Inicializa em PT
+    // Ativa PT por padrão, aplica animações da seção
     window.addEventListener('load', () => {
-      changeLanguage('pt');
-      positionMinCircles(); /* para reposicionar os minicírculos */
+      changeLanguage('pt'); // Força PT
+
+      // IntersectionObserver para animar .slide-left, .slide-right, .slide-up
+      const slideElems = document.querySelectorAll('.slide-left, .slide-right, .slide-up');
+      const observerOptions = { threshold: 0.1 };
+      const observer = new IntersectionObserver((entries, obs) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add('slide-active');
+            obs.unobserve(entry.target);
+          }
+        });
+      }, observerOptions);
+
+      slideElems.forEach(el => {
+        observer.observe(el);
+      });
+
+      // Reposiciona minicírculos do carrossel
+      positionMinCircles();
     });
   </script>
 </body>
